[package]
name = "project_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
actix-web = "3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
glob = "0.3.1"
tokio-util = { version = "0.7.8", features = ["full"] }
